nivasa-macros/tests/trybuild/validation_array_min_size_invalid.rs
use nivasa_macros::Dto;

#[derive(Dto)]
struct TagListForm {
    #[array_min_size(2)]
    tags: bool,
}

fn main() {}
